# 202202-UFMG-RNA

./: .gitignore  pyproject.toml
cnn/: CNNbasica_MNIST_alunos.R  ufmg_202202_rna_cnn.ipynb
elm/: elm.ipynb  main.ipynb
elm/quarto/: .gitignore  elm.qmd
ex01/: main.qmd
ex02/: main.ipynb  main.qmd
paper01/: main.ipynb  tests.ipynb  visualize.ipynb
paper01/src/: cli.py  datasets.py  experiments.py  experiments_cli.py  models.py  plots.py
paper01/tex/: IEEEtai.cls  document.tex
paper02/: MNIST.ipynb  all_in_one.ipynb  cli.ipynb  cli.py  eval.ipynb  mlp-sklearn.ipynb  mlp.ipynb  tests.ipynb  tests.py  topology.ipynb  visualize.ipynb
paper02/src/: __init__.py  cli.py  datasets.py  graph.py  metrics.py
paper03/: UFMG202202-RNA-PAPER03.ipynb  cli.py  test_torch.ipynb  tests.py  visualize.ipynb
paper03/presentation/: presentation.md
paper03/src/: metrics.py  model.py  torch_custom.py
seminar/: presentation.md
