[tool.poetry]
name = "202202-ufmg-rna"
version = "0.1.0"
description = ""
authors = ["Gustavo Maia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
matplotlib = "^3.5.3"
pandas = "^1.4.4"
jupyter = "^1.0.0"
scikit-learn = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
