[tool.poetry]
name = "202202-ufmg-rna"
version = "0.1.0"
description = ""
authors = ["Gustavo Maia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
matplotlib = "^3.5.3"
pandas = "^1.4.4"
jupyter = "^1.0.0"
scikit-learn = "^1.1.2"
requests = "^2.28.1"
tqdm = "^4.64.1"
mlxtend = "^0.21.0"
typer = "^0.6.1"
requests-cache = "^0.9.6"
umap-learn = "^0.5.3"
networkx = "^2.8.8"
pytest = "^7.2.0"
seaborn = "^0.12.1"
torch = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
